crates/math-core/tests/snapshots/error_test__limits_in_bad_spot_2.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\int_\\limits a"
---
Error: Found "\limits", which may only appear after \int, \sum, ....
   ╭─[ <input>:1:6 ]
   │
 1 │ \int_\limits a
   │      ───┬───  
   │         ╰───── cannot be used here
───╯
